.metadata/.plugins/org.eclipse.cdt.ui/yer_istasyonu.build.log
23:14:38 **** Incremental Build of configuration Debug for project yer_istasyonu ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/data_packet.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32G474xx -c -I../Core/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32G4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/data_packet.d" -MT"Core/Src/data_packet.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/data_packet.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32G474xx -c -I../Core/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32G4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
In file included from ../Core/Src/data_packet.c:1:
../Core/Inc/data_packet.h:52:16: error: redefinition of 'struct data_packet'
   52 | typedef struct data_packet
      |                ^~~~~~~~~~~
../Core/Inc/data_packet.h:41:16: note: originally defined here
   41 | typedef struct data_packet
      |                ^~~~~~~~~~~
../Core/Src/data_packet.c: In function 'recive_data_packet':
../Core/Src/data_packet.c:70:49: warning: passing argument 2 of 'HAL_CRC_Calculate' from incompatible pointer type [-Wincompatible-pointer-types]
   70 |         uint16_t crc = HAL_CRC_Calculate(&hcrc, buffer, 16);
      |                                                 ^~~~~~
      |                                                 |
      |                                                 uint8_t * {aka unsigned char *}
In file included from ../Core/Inc/stm32g4xx_hal_conf.h:240,
                 from ../Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Inc/data_packet.h:7:
../Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_crc.h:312:62: note: expected 'uint32_t *' {aka 'long unsigned int *'} but argument is of type 'uint8_t *' {aka 'unsigned char *'}
  312 | uint32_t HAL_CRC_Calculate(CRC_HandleTypeDef *hcrc, uint32_t pBuffer[], uint32_t BufferLength);
      |                                                     ~~~~~~~~~^~~~~~~~~
../Core/Src/data_packet.c:92:12: warning: returning 'int' from a function with return type 'uint8_t *' {aka 'unsigned char *'} makes pointer from integer without a cast [-Wint-conversion]
   92 |     return (1);
      |            ^
make: *** [Core/Src/subdir.mk:55: Core/Src/data_packet.o] Error 1
make: *** Waiting for unfinished jobs....
In file included from ../Core/Src/main.c:34:
../Core/Inc/data_packet.h:52:16: error: redefinition of 'struct data_packet'
   52 | typedef struct data_packet
      |                ^~~~~~~~~~~
../Core/Inc/data_packet.h:41:16: note: originally defined here
   41 | typedef struct data_packet
      |                ^~~~~~~~~~~
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:124:9: warning: implicit declaration of function 'Lora_SetDefaultConfig' [-Wimplicit-function-declaration]
  124 |         Lora_SetDefaultConfig(&myLoRa);
      |         ^~~~~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:55: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

23:14:38 Build Failed. 5 errors, 3 warnings. (took 347ms)

